--- a/Frontend_and_UI_Design/Homepage/css/style.css
+++ b/Frontend_and_UI_Design/Homepage/css/style.css
@@ -3,10 +3,13 @@
   src: url(/Frontend_and_UI_Design/Homepage/public/mudkty-wtvolkolakgrotesque-light.ttf);
 }
 *{
-  font-family: 'Montserrat Alternates';
+  font-family: Montserrat Alternates;
   margin: 0;
   box-sizing: border-box;
   line-height: normal;
+}
+body{
+  overflow-x:hidden;     /* to remove horizontal scrollbar */
 }
 .rectangle-5{
   position: relative;
@@ -69,14 +72,26 @@
   font-weight: 200;
   line-height: 100%;
 }
+.startprogram{
+  position: absolute;
+  right: 66px;
+  top: 265px;
+  width: 227px;
+  height: 63px;
+  color: #FFF;
+  font-size: 20px;
+  background-color: #0067FF;
+  border-width: 0;
+  border-radius: 31.5px;
+}
 .shapefuture{
-    position: absolute;
-    left: 95.41px;
-    top: 546px;
-    width: 419.658px;
-    height: 101px;
-    font-size: 16px;
-    font-weight: 400;
+  position: absolute;
+  left: 95.41px;
+  top: 546px;
+  width: 419.658px;
+  height: 101px;
+  font-size: 16px;
+  font-weight: 400;
 }
 .est{
   position: absolute;
@@ -88,10 +103,14 @@
   font-weight: 400;
 }
 .rectangle6{
-  display: flex;
   position: relative;
   margin: auto;
   margin-top: 12px;
+  width: 87.5vw;
+}
+.rectangle6 .box{
+  display: flex;
+  position: relative;
   align-items: center;
   width: 87.5vw;
   height: 100px;
@@ -100,31 +119,32 @@
   color: #FFF;
   font-size: 40px;
   font-weight: 200;
-}
-.rectangle6 .text{
-    font-family: volko;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 200;
-    line-height: 100%;
-    padding-left: 95px;
-}
-.heart{
-  display: flex;
-  position: absolute;
-  margin-left: 30px;
-  right: 26%;
-  width: 22vw;
-  height: 23vw;
-  border-radius: 45px;
   z-index: 1;
 }
+.rectangle6 .text{
+  font-family: volko;
+  font-size: 40px;
+  font-weight: 200;
+  padding-left: 95px;
+}
+.rectangle6 .heart{
+  position: absolute;
+  width: 22vw;
+  right: 26%;
+  top: -140px;
+  border-radius: 45px;
+  z-index: 2;
+}
+.rectangle6 img{
+  width: 100%;
+  height: auto;
+}
 .rectangle6 .background{
-  display: flex;
   position: absolute;
   right: 26%;
-  width: 24vw;
-  height: 24vw;
+  top: -140px;
+  width: 22vw;
+  height: 22vw;
   border-radius: 395px;
   background: #C75050;
   filter: blur(94px);
@@ -175,7 +195,6 @@
 .rect20and21{
   margin-top: 96px;
   display: flex;
-  /* margin: auto; */
   width: 100%;
   height: 170px;
   gap: 20px;
@@ -183,7 +202,6 @@
 .rect22and23{
   margin-top: 37px;
   display: flex;
-  /* margin: auto; */
   width: 100%;
   height: 170px;
   gap: 20px;
@@ -191,7 +209,6 @@
 
 
 /* about us  */
-
 .aboutus{
   width: 86.5vw;
   height: 503px;
@@ -234,7 +251,7 @@
 }
 .rect24 img{
   width:100%;
-  height: 100%;
+  height:100%;
 }
 .rect24 .background{
   display: flex;
@@ -248,20 +265,96 @@
   z-index:0; 
 } 
 
-
+  /* Contact us */
+  .contactandlogo{
+    display: flex;
+    align-items: center;
+    margin-top: 62px;
+    margin-left: 6.5vw;
+  }
+  .contactandlogo .head{
+    margin-left: 2.5vw;
+    font-family: Montserrat Alternates;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 500;
+  }
+  .queries{
+    color: #FFF;
+    width: 86.8vw;
+    height: 273px;
+    align-items: center;
+    margin: auto;
+    margin-top: 56px;
+    display: flex;
+    border-radius: 45px;
+    background: #0067FF;
+  }
+  .enteremail{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .enteremail form{
+    display: flex;
+    flex-direction: column;
+    margin-left: 90px;
+    margin-right: 20px;
+  }
+  .form input{
+    background:#D9D9D9;
+    border-width: 0px;
+    height: 54px;
+    border-radius: 64px;
+    font-size: 32px;
+    text-align: center;
+  }
+  form input::placeholder{
+    color:#000;
+  }
+  .form input[type=email]{
+    background:#D9D9D9 ;
+    margin-top: 22px;
+    width: 20.7vw;
+    margin-bottom: 22px;
+  }
+  input:focus::placeholder{
+    color: transparent;
+  }
+  .form input[type=submit]{
+    color: #000;
+    width: 20.7vw;
+  }
+  .enteremail .text{
+    font-size: 20px;
+  }
+  .emailandnumber{
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    gap: 29px;
+  }
+  .emailandnumber .phone{
+    display: flex;
+    align-items: center;
+  }
+  .emailandnumber .email{
+    display: flex;
+    align-items: center;
+  }
+  
 
   /* footer */
 
-.footer{
+footer{
   position: absolute;
-  top: 3367px;
   display: flex;
-  width: 100%;
+  width: 100vw;
   height: 65px;
   background: #0067FF;
   align-items: center;
-  margin: auto;
-  margin-top: 200px;
+  margin-top: 58px;
 }
 
 .copyright{
