--- a/DeployML3/mlmodel/templates/mlmodel/form_diab.html
+++ b/DeployML3/mlmodel/templates/mlmodel/form_diab.html
@@ -9,8 +9,12 @@
 
 
     <form action="result">
-        HighBP = <input type="number" name="HighBP" required><br>
-        HighChol = <input type="number" name="HighChol" required><br>
+        HighBP = Yes <input type="radio" id = "Yes" name="HighBP" value = "HighBP" required>
+        No <input type="radio" id = "No" name="HighBP" value = "NormalBP" required><br>
+        HighChol = <input type="number" name="HighChol" required>
+        <!-- HighChol: Yes <input type="radio" id = "Chol" name="HighChol" value = "HighChol" required>
+        No <input type="radio" id = "Chol" name="HighChol" value = "HighChol" required>
+        <br> -->
         BMI = <input type="number" name="BMI" required><br>
         Stroke = <input type="number" name="Stroke" required><br>
         HeartDiseaseorAttack = <input type="number" name="HeartDiseaseorAttack" required>
