--- a/DeployML3/mlmodel/templates/mlmodel/form_diab.html
+++ b/DeployML3/mlmodel/templates/mlmodel/form_diab.html
@@ -11,10 +11,10 @@
     <form action="result">
         HighBP = Yes <input type="radio" id = "Yes" name="HighBP" value = "HighBP" required>
         No <input type="radio" id = "No" name="HighBP" value = "NormalBP" required><br>
-        HighChol = <input type="number" name="HighChol" required>
-        <!-- HighChol: Yes <input type="radio" id = "Chol" name="HighChol" value = "HighChol" required>
-        No <input type="radio" id = "Chol" name="HighChol" value = "HighChol" required>
-        <br> -->
+        <!-- HighChol = <input type="number" name="HighChol" required> -->
+        HighChol: Yes <input type="radio" id = "Yes" name="HighChol" value = "HighChol" required>
+        No <input type="radio" id = "No" name="HighChol" value = "NormalChol" required>
+        <br>
         BMI = <input type="number" name="BMI" required><br>
         Stroke = <input type="number" name="Stroke" required><br>
         HeartDiseaseorAttack = <input type="number" name="HeartDiseaseorAttack" required>
