--- a/HMS/templates/form_diab.html
+++ b/HMS/templates/form_diab.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,25 +32,22 @@
         Age =<input type="number" name="Age" required>
         <input type="submit"> 
     </form> -->
-    {% for message in messages %}
+    <!-- {% for message in messages %}
         <h5>{{ message }}</h5>
-    {% endfor %}
+    {% endfor %} -->
     <form onsubmit="return validateForm()" action="result" name="form1"  >
 
         <div class="background1"></div>
-        <div class="background2">
-            <!-- <img src="./public/Ellipse_13.svg"> -->
-        </div>
         <div class="header">
-            <a href="homepage2" class="logo">
+            <a href="homepage" class="logo">
                 <img src="../static/public/logo.svg" alt="">
                 <div class="logoname">MED.AI</div>
             </a>
             <div class="Patient_ID">
-                <input type="text" class="patient_id_input" placeholder="Patient Id" name="PatientID" required maxlength="30">
+                <input type="text"  placeholder="Patient Id" name="PatientID" required maxlength="30">
             </div>
             <div class="Doctor_Name">
-                <input type="text" class="doctorNameInput" placeholder="{{ DoctorProfile.first_name }} {{DoctorProfile.last_name}}" readonly>
+                <input type="text"  placeholder="{{ DoctorProfile.first_name }} {{DoctorProfile.last_name}}" readonly>
                 <img src="../static/public/user.svg" alt="User" maxlength="30">
             </div>
         </div>
@@ -80,13 +76,17 @@
                     <div class="grid-item" id="grid-item1">
                         <div>High BP</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighBP" id="Yes1" value="Yes"required>
-                                <label class="form-check-label" for="Yes1">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HighBP" id="Yes1" value="Yes"required>
+                                    <label class="form-check-label" for="Yes1">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighBP" id="No1" value="No"required>
-                                <label class="form-check-label" for="No1">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HighBP" id="No1" value="No"required>
+                                    <label class="form-check-label" for="No1">No</label>
+                                </div>
                             </div>
                         </div>
 
@@ -95,13 +95,17 @@
                     <div class="grid-item" id="grid-item2">
                         <div>High Cholestrol</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighChol" id="Yes2" value="Yes"required>
-                                <label class="form-check-label" for="Yes2">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HighChol" id="Yes2" value="Yes"required>
+                                    <label class="form-check-label" for="Yes2">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HighChol" id="No2" value="No"required>
-                                <label class="form-check-label" for="No2">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HighChol" id="No2" value="No"required>
+                                    <label class="form-check-label" for="No2">No</label>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -111,13 +115,17 @@
                     <div class="grid-item" id="grid-item4">
                         <div>Stroke</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="Stroke" id="Yes3" value="Yes"required>
-                                <label class="form-check-label" for="Yes3">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="Stroke" id="Yes3" value="Yes"required>
+                                    <label class="form-check-label" for="Yes3">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="Stroke" id="No3" value="No"required>
-                                <label class="form-check-label" for="No3">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="Stroke" id="No3" value="No"required>
+                                    <label class="form-check-label" for="No3">No</label>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -125,13 +133,17 @@
                     <div class="grid-item" id="grid-item5">
                         <div>HeartDisease or Attack</div>
                         <div class="radio-buttons">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="Yes4" value="Yes" required>
-                                <label class="form-check-label" for="Yes4">Yes</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="Yes4" value="Yes" required>
+                                    <label class="form-check-label" for="Yes4">Yes</label>
+                                </div>
                             </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="No4" value="No" required>
-                                <label class="form-check-label" for="No4">No</label>
+                            <div class="formcheck">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="HeartDiseaseorAttack" id="No4" value="No" required>
+                                    <label class="form-check-label" for="No4">No</label>
+                                </div>
                             </div>
                         </div>
                     </div>
